--- a/cmt/src/main/resources/application.properties
+++ b/cmt/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=cmt
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=public
-spring.datasource.username=cmt
-spring.datasource.password=cmt1234s
+spring.datasource.username=postgres
+spring.datasource.password=cmt123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
