--- a/cmt/src/main/resources/application.properties
+++ b/cmt/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=cmt123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.open-in-view=true
+
+accessTokenExpiration = 15 * 60 * 1000
+refreshTokenExpiration = 7 * 24 * 60 * 60 * 1000
