--- a/cmt/src/main/resources/application.properties
+++ b/cmt/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=cmt
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=public
-spring.datasource.username=postgres
+spring.datasource.username=cmt
 spring.datasource.password=cmt123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 
-accessTokenExpiration = 15 * 60 * 1000
-refreshTokenExpiration = 7 * 24 * 60 * 60 * 1000
+accessTokenExpiration = 900000
+refreshTokenExpiration = 604800000
