--- a/cmt-frontend/package.json
+++ b/cmt-frontend/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.23.4",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
