--- a/cmt/src/main/resources/application.properties
+++ b/cmt/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 
-accessTokenExpiration = 900000
-refreshTokenExpiration = 604800000
+accessTokenExpiration =  10800000
+refreshTokenExpiration = 21600000
